[package]
name = "mlmdquery"
version = "0.1.0"
edition = "2018"
mlauthors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A command-line tool to query the contents of an ml-metadata DB."
homepage = "https://github.com/sile/mlmdquery"
repository = "https://github.com/sile/mlmdquery"
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
palette = "0.6"
structopt = "0.3"
mlmd = "0.2"
tokio = {version = "1", features = ["macros"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tinytemplate = "1"